--- a/index.html
+++ b/index.html
@@ -10,8 +10,21 @@
 </head>
 
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
+  <script type="module" src="/src/header.ts"></script>
+  <header class="w-full bg-white border-b border-gray-200">
+    <div class="max-w-6xl mx-auto px-6 py-4">
+      <div class="text-xl font-semibold tracking-wide text-gray-900">
+        Tools Website
+      </div>
+    </div>
+  </header>
+  <div>
+    <lu>
+      <li>
+        <a href="/text-transform.html">字母大小写转换</a>
+      </li>
+    </lu>
+  </div>
 </body>
 
 </html>
